platform/components/runners/rust/network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: build-cache
spec:
  podSelector:
    matchExpressions:
    - key: actions.github.com/scale-set-name
      operator: In
      values:
      - rust-pr-amd64
      - rust-amd64
      - rust-release-amd64
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: object-store
      podSelector:
        matchLabels:
          app.kubernetes.io/name: seaweedfs
          app.kubernetes.io/instance: hel1
    ports:
    - protocol: TCP
      port: 8333
